<resources>
    <string name="app_name">GT Store</string>
    <string name="app_slogan">Delivering Happiness!</string>
    <string name="onboarding_title1">Setup your store!</string>
    <string name="onboarding_title2">Add/Remove Products</string>
    <string name="onboarding_title3">Manage your orders!</string>
    <string name="onboarding_description1">Setup your online Grocer Taxi store in your city of choice with no hassle.</string>
    <string name="onboarding_description2">Add or remove products in different categories we provide with ease.</string>
    <string name="onboarding_description3">Manage customers\' orders - Update them about their orders, accept payment, etc.</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="grocer_taxi_store">Grocer Taxi Store</string>
    <string name="setup_new_store">Setup new store</string>
    <string name="already_registered">Already registered</string>
    <string name="setup_store">Setup Store</string>
    <string name="take_your_business_online">Take your business online.</string>
    <string name="basic_info">Basic Info</string>
    <string name="name_your_store">Name your store*</string>
    <string name="name_of_owner">Name of owner*</string>
    <string name="email">Email*</string>
    <string name="mobile">Mobile*</string>
    <string name="create_password">Create password*</string>
    <string name="additional_info">Additional Info</string>
    <string name="opening_time">Opening Time*</string>
    <string name="closing_time">Closing Time*</string>
    <string name="set_a_minimum_order_value_for_home_delivery">Set a minimum order value for home delivery</string>
    <string name="enter_amount">Enter amount*</string>
    <string name="complete_setup">Complete Setup</string>
    <string name="already_registered_">Already Registered?</string>
    <string name="get_in">Get in</string>
    <string name="verify_your_mobile">Verify your mobile</string>
    <string name="enter_below_the_one_time_password_nsent_to_91xxxxxxxxxx">Enter below the One Time Password\nsent to +91XXXXXXXXXX</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="get_in_your_store">Get in your store</string>
    <string name="and_start_managing_it">And start managing it.</string>
    <string name="email_or_mobile">Email or Mobile*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_store">Don\'t have a store?</string>
    <string name="set_up">Set up</string>
    <string name="hi_there">Hi there!</string>
    <string name="what_city_your_store_would_be_in">What city your store would be in?</string>
    <string name="search_your_city">Search your city</string>
    <string name="connection_error">Connection Error</string>
    <string name="something_s_not_right_please_check_nyour_internet_connection_and_try_again">Something\'s not right. Please check\nyour internet connection and try again.</string>
    <string name="retry">RETRY</string>
    <string name="city_name">City Name</string>
    <string name="okay">Okay!</string>
    <string name="where_in_city">Where in City?</string>
    <string name="search_your_locality">Search your locality</string>
    <string name="locality_name">Locality Name</string>
    <string name="sunday_december_1">Sunday, December 1</string>
    <string name="store_name">Store Name</string>
    <string name="sample_address">Shop no. 25, XYZ Complex, Near Railway Station, Dhanbad, Jharkhand - 828130</string>
    <string name="store_closed">Store Closed</string>
    <string name="manage_norders">Manage\nOrders</string>
    <string name="manage_nproducts">Manage\nProducts</string>
    <string name="cancellation_requests">Cancellation Requests</string>
    <string name="manage_products_by_category">Manage products by category</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="food_grains">Food Grains</string>
    <string name="dairy_items">Dairy Items</string>
    <string name="bakery_items">Bakery Items</string>
    <string name="beverages">Beverages</string>
    <string name="dry_fruits">Dry Fruits</string>
    <string name="meat_bacon">Meat &amp; Bacon</string>
    <string name="noodles_pasta">Noodles &amp; Pasta</string>
    <string name="snacks">Snacks</string>
    <string name="kitchen_oil">Kitchen Oil</string>
    <string name="spices">Spices</string>
    <string name="sweets">Sweets</string>
    <string name="baby_care">Baby Care</string>
    <string name="household">Household</string>
    <string name="personal_care">Personal Care</string>
    <string name="pet_care">Pet Care</string>
    <string name="stationary">Stationary</string>
    <string name="hardware">Hardware</string>
    <string name="medical">Medical</string>
    <string name="sports">Sports</string>
    <string name="managed_by">Managed by</string>
    <string name="store_owner">Store Owner</string>
    <string name="rating_reviews">Ratings &amp; Reviews</string>
    <string name="xx">XX</string>
    <string name="address">Address</string>
    <string name="email_">Email</string>
    <string name="xxxxxxxxxxxx_xxxxx_xxx">xxxxxxxxxxxx@xxxxx.xxx</string>
    <string name="mobile_">Mobile</string>
    <string name="_91xxxxxxxxxx">+91XXXXXXXXXX</string>
    <string name="store_timing">Store Timing</string>
    <string name="_00_00_am_00_00_pm">00:00 AM - 00:00 PM</string>
    <string name="minimum_order_value">Minimum Order Value</string>
    <string name="_0_00">₹ 0.00</string>
    <string name="manage_orders">Manage Orders</string>
    <string name="manage_products">Manage Products</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="app_settings">App Settings</string>
    <string name="log_out">Log Out</string>
    <string name="add_new_product">Add new product</string>
    <string name="take_it_out_to_the_market">Take it out to the market</string>
    <string name="select_category">Select Category*</string>
    <string name="product_name">Product name*</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="unit_quantity_eg_1_kg_1_l_500_gm">Unit quantity (eg. 1 kg, 1 L, 500 gm)*</string>
    <string name="mrp">MRP*</string>
    <string name="our_price">Our Price*</string>
    <string name="units_in_stock">Units in stock*</string>
    <string name="additional_information_optional">Additional Information (optional)</string>
    <string name="description">Description</string>
    <string name="brand">Brand</string>
    <string name="date_of_mfg">Date of MFG.</string>
    <string name="best_before">Best before</string>
    <string name="add_product">Add Product</string>
    <string name="pin_address_on_map">Pin address on map</string>
    <string name="for_that_grocer_taxi_needs_the_permission_to_naccess_your_device_s_location">For that, Grocer Taxi needs the permission to\naccess your device\'s location</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="all_products">All products</string>
    <string name="search_product">Search product</string>
    <string name="no_products_in_here">No products in here</string>
    <string name="your_store_will_be_setup_here">Your store will be setup here</string>
    <string name="please_place_the_pin_accurately_on_map">Please place the pin accurately on map</string>
    <string name="pin_your_location">Pin your location</string>
    <string name="your_location">Your location</string>
    <string name="locating">Locating..</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="enter_address_details">Enter address details</string>
    <string name="complete_address">Complete address*</string>
    <string name="landmark_optional">Landmark (optional)</string>
    <string name="save">Save</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_for_now">No reviews for now</string>
    <string name="user_name">User Name</string>
    <string name="sample_review">Quality products and on-time delivery. Really satisfied with the service.</string>
    <string name="update_product">Update product</string>
    <string name="keep_your_business_updated">Keep your business updated</string>
    <string name="in_stock">In stock</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="orders">Orders</string>
    <string name="search_by_order_id">Search by Order ID</string>
    <string name="no_cancelled_orders_as_of_now">No cancelled orders as of now</string>
    <string name="no_completed_orders_as_of_now">No completed orders as of now</string>
    <string name="no_pending_orders_as_of_now">No pending orders as of now</string>
    <string name="order_id">Order ID :</string>
    <string name="_000000000000">#000000000000</string>
    <string name="requested_on">Requested on</string>
    <string name="cancelled">Cancelled</string>
    <string name="cancelled_on_saturday_mar_2_2021_11_45_am">Cancelled on Saturday, Mar 2 2021, 11:45 AM</string>
    <string name="ordered_by">Ordered by</string>
    <string name="x_items">x items</string>
    <string name="delivered">Delivered</string>
    <string name="delivered_on_saturday_mar_2_2021_11_45_am">Delivered on Saturday, Mar 2 2021, 11:45 AM</string>
    <string name="product_name_">Product Name</string>
    <string name="x">X</string>
    <string name="placed">Placed</string>
    <string name="placed_on_saturday_feb_2_2021_11_45_am">Placed on Saturday, Feb 2 2021, 11:45 AM</string>
    <string name="xx_off">XX% OFF</string>
    <string name="_5_kilograms">5 kilograms</string>
    <string name="category">Category :</string>
    <string name="product_category">Product Category</string>
    <string name="_0_unit_in_stock">(0 unit in stock)</string>
    <string name="xxx">₹ XXX</string>
    <string name="no_requests_as_of_now">No requests as of now</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_below_and_we_ll_send_you_a_npassword_reset_link_on_that">Enter your email below and we\'ll send\nyou a password reset link on that.</string>
    <string name="enter_your_email">Enter your email*</string>
    <string name="send_link">Send Link</string>
    <string name="order_detail">Order Detail</string>
    <string name="status">Status</string>
    <string name="pre_paid_order">Pre-paid Order</string>
    <string name="customer_name">Customer Name</string>
    <string name="distance_2_km">Distance : 2 km</string>
    <string name="order_items">ORDER ITEMS</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="total_mrp">Total MRP</string>
    <string name="discount_on_mrp">Discount on MRP</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="not_applied">Not Applied</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="free">FREE</string>
    <string name="tip_added">Tip Added</string>
    <string name="__0_00">+ ₹ 0.00</string>
    <string name="convenience_fee">Convenience Fee</string>
    <string name="total_payable">Total Payable</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="order_id_">Order ID</string>
    <string name="order_instructions">Order Instructions</string>
    <string name="no_instructions">No instructions</string>
    <string name="payment_method">Payment Method</string>
    <string name="online_payment">Online Payment</string>
    <string name="placed_on">Placed on</string>
</resources>