<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/click_listener"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/_000000000000"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_pending_order"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/img_pending_order"
        app:layout_constraintBottom_toBottomOf="@id/order_placing_time"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/placed"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/processingColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_pending_order"
        app:layout_constraintTop_toBottomOf="@id/order_id" />

    <TextView
        android:id="@+id/order_placing_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/placed_on_saturday_feb_2_2021_11_45_am"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorInactive"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_pending_order"
        app:layout_constraintTop_toBottomOf="@+id/order_status"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/text_ordered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/ordered_by"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorInactive"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/order_user_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/order_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/user_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/order_total_payable"
        app:layout_constraintEnd_toStartOf="@id/order_total_payable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/order_total_payable" />

    <TextView
        android:id="@+id/no_of_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/x_items"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/infoColor"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_pending_order" />

    <TextView
        android:id="@+id/order_total_payable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/_0_00"
        android:textAlignment="textEnd"
        android:textAllCaps="false"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_of_items" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorInactive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_total_payable" />

</androidx.constraintlayout.widget.ConstraintLayout>