<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ChooseCityActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorIconDark" />

        <TextView
            android:id="@+id/choose_city_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/hi_there"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close_btn" />

        <TextView
            android:id="@+id/choose_city_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/what_city_your_store_would_be_in"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorInactive"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_city_title" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/choose_city_gif"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_city_subtitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/input_city_search"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            app:cardBackgroundColor="@color/colorBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="@+id/choose_city_gif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/choose_city_gif">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_city_search_field"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/search_your_city"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="16dp"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    android:textColorHint="@color/colorInactive"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/speech_to_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/speech_to_text"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:padding="6dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_mic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorIconDark" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_city"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="104dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_city_gif" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:progressTint="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recycler_city" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_no_internet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_no_internet"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_no_internet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_no_internet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/connection_error"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_no_internet" />

        <TextView
            android:id="@+id/text_no_internet_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:alpha="0.75"
            android:fontFamily="@font/montserrat"
            android:includeFontPadding="false"
            android:text="@string/something_s_not_right_please_check_nyour_internet_connection_and_try_again"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_no_internet" />

        <androidx.cardview.widget.CardView
            android:id="@+id/retry_btn_container"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_no_internet_desc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/retry_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/text_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:fontFamily="@font/montserrat"
                    android:includeFontPadding="false"
                    android:text="@string/retry"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTextDark"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>